--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -30,16 +30,16 @@
           <p>Niveau : {{ gamer.level }}</p>
 
           <form action=" {{ path('play') }} " method="GET">
-          <input type="checkbox" name="gamer[]" value="{{ gamer.id }}" /> Sélectionner ce joueur
+          <label><input type="checkbox" name="gamer[]" value="{{ gamer.id }}" /> Sélectionner ce joueur</label>
         </div>
       {% endfor %}
 
       <h3>{{ title2 }}</h3>
         {% for subject in subjects %}
-          <div class="subject">
+          <div class="chooseSubject">
             {{ subject.nameSubject }}
             <div>
-              <input type="checkbox" name="subject[]" value="{{ subject.id }}" /> Choisir ce thème
+              <label><input type="checkbox" name="subject[]" value="{{ subject.id }}" /> Choisir ce thème</label>
             </div>
           </div>
         {% endfor %}
